# docscope-mcp

./: .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/docscope_mcp/: README.md  __init__.py  __version__.py  cli.py  filesystem.py  server.py
src/docscope_mcp/analyzers/: __init__.py  base.py
src/docscope_mcp/analyzers/python/: __init__.py  analyzer.py
src/docscope_mcp/assets/utils/: README.md
src/docscope_mcp/models/: __init__.py  analysis.py  config.py  quality.py
tests/: README.md  __init__.py  mock_filesystem.py  test_analyzer.py  test_cli.py  test_filesystem.py  test_main.py  test_models.py  test_server.py
utils/: analyze_mcp_overhead.py
